--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,6 +51,10 @@ set -g visual-silence off
 setw -g monitor-activity off
 set -g bell-action none
 
+# start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 # renumber windows when one is closed
 set -g renumber-windows on
 
@@ -58,7 +62,7 @@ set -g renumber-windows on
 set -g history-limit 50000
 
 # tmux messages are displayed for 4 seconds
-set -g display-time 1000
+set -g display-time 4000
 
 # refresh status line every 5 seconds
 set -g status-interval 5
@@ -74,6 +78,12 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark'
 set -g @tmux-gruvbox-statusbar-alpha 'true'
+set -g @tmux-gruvbox-left-status-a '#S'           # session name only
+set -g @tmux-gruvbox-left-status-b ''             # empty
+set -g @tmux-gruvbox-left-status-c ''             # empty
+set -g @tmux-gruvbox-right-status-x '#{cpu_percentage}'     # cpu usage
+set -g @tmux-gruvbox-right-status-y '#{battery_icon} #{battery_percentage}' # battery
+set -g @tmux-gruvbox-right-status-z '%H:%M'       # time only
 
 
 
@@ -87,7 +97,7 @@ set -g @plugin 'tmux-plugins/tmux-open'           # open files/urls from tmux
 set -g @plugin 'christoomey/vim-tmux-navigator'   # seamless vim/tmux navigation
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight' # show when prefix is pressed
 
-# Misc plugins
+# Cool additional plugins
 set -g @plugin 'tmux-plugins/tmux-sidebar'        # file tree sidebar
 set -g @plugin 'tmux-plugins/tmux-copycat'        # enhanced search
 set -g @plugin 'laktak/extrakto'                  # fuzzy find text/urls
@@ -95,15 +105,7 @@ set -g @plugin 'tmux-plugins/tmux-logging'        # save pane contents
 set -g @plugin 'sainnhe/tmux-fzf'                 # fzf integration
 set -g @plugin 'wfxr/tmux-fzf-url'                # open urls with fzf
 
-# Gruvbox theme overrides for status bar
-set -g @tmux-gruvbox 'dark'
-set -g @tmux-gruvbox-statusbar-alpha 'true'
-set -g @tmux-gruvbox-left-status-a '#S'           # session name only
-set -g @tmux-gruvbox-left-status-b ''             # empty
-set -g @tmux-gruvbox-left-status-c ''             # empty
-set -g @tmux-gruvbox-right-status-x '#{cpu_percentage}'     # cpu usage
-set -g @tmux-gruvbox-right-status-y '#{battery_icon} #{battery_percentage}' # battery
-set -g @tmux-gruvbox-right-status-z '%H:%M'       # time only
+
 
 # Plugin configurations
 set -g @resurrect-capture-pane-contents 'on'
@@ -115,7 +117,7 @@ set -g @continuum-save-interval '15'
 # Battery plugin config
 set -g @batt_icon_status_charged '🔋'
 set -g @batt_icon_status_charging '⚡'
-set -g @batt_icon_status_discharging '🪫'
+set -g @batt_icon_status_discharging '🔋'
 
 # CPU plugin config
 set -g @cpu_low_icon "CPU"
